# eventsail

./: .gitignore  CHANGELOG.md  README.md  emitter.py  eventsail.py  pyemitter.py  pyproject.toml  pytest.ini
.github/workflows/: python-package.yml  python-publish.yml
tests/: test_async_emitter.py  test_event.py  test_sync_emitter.py
