[tool.poetry]
name = "emitter"
version = "0.1.0"
description = "Library for emitting events and handling them in a decoupled way."
authors = ["Satyam Soni <satyam.soni@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
